; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2560.c_rt2560_update_led.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2560.c_rt2560_update_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2560_softc = type { i32 }

@RT2560_LEDCSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2560_softc*, i32, i32)* @rt2560_update_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2560_update_led(%struct.rt2560_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rt2560_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.rt2560_softc* %0, %struct.rt2560_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = shl i32 %8, 16
  %10 = load i32, i32* %6, align 4
  %11 = shl i32 %10, 17
  %12 = or i32 %9, %11
  %13 = or i32 %12, 17920
  %14 = or i32 %13, 30
  store i32 %14, i32* %7, align 4
  %15 = load %struct.rt2560_softc*, %struct.rt2560_softc** %4, align 8
  %16 = load i32, i32* @RT2560_LEDCSR, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @RAL_WRITE(%struct.rt2560_softc* %15, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @RAL_WRITE(%struct.rt2560_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
